# spotify-mcp-enhanced-music-overload

./: .env.example  .gitignore  251022_1745_TASK_MASTER_REPORT.md  251022_1800_TEST_RESULTS_PHASE1.md  251022_1815_TASK19_COMPLETE.md  251022_1830_TASK22_BATCHING_AUDIT.md  251023_0150_RATE_LIMIT_HANDLING.md  CURRENT_SPRINT.md  Dockerfile  Dockerfile.glama  ENHANCEMENT_ROADMAP.md  HANDOFF_251024_1830_PHASE2_COMPLETE.md  MERGE_SUMMARY_v0.2.0.md  PHASE2_AUDIO_ANALYSIS_STRATEGY.md  PHASE2_COMPLETE.md  PHASE2_IMPLEMENTATION_PLAN.md  PROJECT_STANDARDS.md  README.md  SECURITY_CLEANUP_REPORT.md  SECURITY_STANDARDS.md  TESTING_GUIDE.md  analyze_top_genres.py  claude_desktop_config.example.json  create_deep_tracks_playlist.py  find_tracks_with_previews.py  glama.json  mcp.sh  pyproject.toml  requirements.txt  server  smithery.yaml  spotify-mcp-server.txt  test_curation_features.py  test_phase1_tools.py  test_phase2a.py  test_phase2b_integration.py  test_phase2b_mock.py  test_playlist_review.py
.claude/commands/: load_project_context.md
_old_handoff_summaries_plans/: 251022_1745_SECURITY_AUDIT_PHASE1.md  251023_0140_SEED_VALIDATION_ADDED.md  251023_0230_CURATION_FEATURES_ADDED.md  CLAUDE_CODE_CLI_SETUP.md  PHASE1_COMPLETE.md  PHASE1_FEATURES_SUMMARY.md  PHASE1_IMPLEMENTATION_PLAN.md
src/: __init__.py  server.py  spotify_client.py
src/analysis/: __init__.py  audio_analyzer.py  exceptions.py
src/clients/: __init__.py  spotify_client.py
src/features/: __init__.py  cache.py  models.py  service.py
src/logic/: __init__.py  artist_logic.py  playlist_logic.py
(+4 files in other folders)
