[project]
name = "spotify-mcp"
version = "0.2.0"
description = "MCP server for Spotify playlist curation with audio analysis"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "spotipy>=2.23.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
audio = [
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "requests-mock>=1.10.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]
